change name js file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <section class="container"></section>
-    <script src="./assets/js/switch.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
